<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
   android:background="@drawable/grad"
    android:weightSum="1">
<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    app:theme="@style/ThemeOverlay.AppCompat.Dark"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    android:layout_weight="0.09" />


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/grad"
    android:weightSum="1">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.29">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PershkrimiLojesNdihme"
            android:textSize="16dp"
            android:textColor="#447760"
            />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/prompt_user"
            android:text=""
            android:maxLines="1" />
        <Button
            android:id="@+id/btnHapLojen"
            style="?android:textAppearanceSmall"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/gradbut"
            android:text="@string/action_sign_in"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btnHighScore"
            style="?android:textAppearanceSmall"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/gradbut"
            android:text="@string/HighScore"
            android:textSize="16dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/btnOpsione"
            style="?android:textAppearanceSmall"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/gradbut"
            android:text="@string/Option"
            android:textSize="16dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/btnExit"
            style="?android:textAppearanceSmall"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/gradbut"
            android:text="@string/Exit"
            android:textSize="16dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>





    </LinearLayout>

</LinearLayout>
</LinearLayout>